# rocq-lsp

./: CHANGES.md  Makefile  README.md  coq-lsp.opam  dune-project
.github/workflows/: build.yml
compiler/: args.ml  cc.ml  compile.ml  compile.mli  driver.ml  fcc.ml  output.ml  output.mli
controller/: dune  lsp_core.ml  lsp_core.mli  nt_cache_trim.ml  request.ml  request.mli  rq_action.ml  rq_completion.ml  rq_definition.ml  rq_document.ml  rq_goals.ml  rq_goals.mli  rq_hover.ml  rq_hover.mli  rq_save.ml  rq_symbols.ml
coq/: args.ml  args.mli  ast.ml  dune  files.ml  files.mli  goals.ml  goals.mli  init.ml  init.mli  library_file.ml  loc_t.ml  message.mli  notation_analysis.ml  notation_analysis.mli  parsing.ml  parsing.mli  pp_t.ml  print.ml  print.mli  protect.ml  protect.mli  save.ml  state.ml  state.mli  utils.ml  utils.mli  workspace.ml  workspace.mli
coq-layout-engine/: boxModel.ml  boxModel.mli  coq_util.ml  dune  term.ml
editor/code/: CHANGELOG.md  package-lock.json  package.json
editor/code/lib/: types.ts
editor/code/src/: client.ts  config.ts  configManager.ts  goals.ts  petanque.ts  status.ts
editor/code/views/info/: Info.tsx  configManager.ts  tsconfig.json
editor/code/views/info/media/: boxmodel.css
etc/: 0001-String-UTF-for-Ocaml-4.12.patch  0001-jscoq-Interrupt-and-timeout-Rocq-patch.patch  FAQ.md  SerAPI.md
etc/doc/: PROTOCOL.md  README.md  USER_MANUAL.md
etc/release_notes/: 0.1.9.md  0.2.5.md
examples/: Demo.v  _RocqProject  comments_end.v  cudw2023demo.mv  notations_rempar.v  petanque.v  waterproof_test.v
fleche/: config.ml  contents.ml  doc.ml  doc.mli  dune  info.ml  info.mli  io.ml  io.mli  memo.ml  memo.mli  perf_analysis.ml  stats.ml  theory.ml  theory.mli  version.ml
lang/: compat.ml  compat.mli  diagnostic.ml  diagnostic.mli  dune  lUri.mli
lsp/: base.ml  core.ml  core.mli  dune  jCoq.ml  jCoq.mli  jFleche.ml  jFleche.mli  jLang.ml  jLang.mli
lsp-server/jsoo/: coq_lsp_worker.ml  dune  jsso.ml
lsp-server/native/: coq_lsp.ml
lsp-server/wasm/: dune  package-lock.json  package.json  wacoq_worker.ml
petanque/: agent.ml  agent.mli  dune
petanque/json/: dune  interp.ml  interp.mli  jAgent.ml  protocol.ml
petanque/json_shell/: client.ml  client.mli  dune  pet.ml  server.ml  shell.ml  shell.mli
petanque/test/: basic_api.ml  dune  json_api.ml  json_api_failure.ml
plugins/astdump/: dune
plugins/baseline/: common.ml  common.mli  dune  main.ml
plugins/count_genargs/: dune
plugins/explain_errors/: dune  main.ml
plugins/goaldump/: dune  main.ml
plugins/metanejo/: dataset.json  dune  load_dataset.py  main.ml
plugins/save_vo/: dune
plugins/simple/: dune
plugins/univdiff/: dune
serlib/: analysis_semtokens.ml  analysis_semtokens.mli  dune  ser_constrexpr.ml  ser_constrexpr.mli  ser_cooking.ml  ser_declarations.ml  ser_entries.ml  ser_genarg.ml  ser_genarg.mli  ser_genredexpr.ml  ser_genredexpr.mli  ser_names.ml  ser_names.mli  ser_pConstraints.ml  ser_pConstraints.mli  ser_proofview.ml  ser_redexpr.ml  ser_redexpr.mli  ser_safe_typing.ml  ser_sorts.ml  ser_sorts.mli  ser_uState.ml  ser_univ.ml  ser_univ.mli  ser_uvars.ml  ser_vernacexpr.ml
serlib/plugins/extraction/: dune
serlib/plugins/firstorder/: dune
serlib/plugins/funind/: dune
serlib/plugins/ltac/: dune  ser_tacarg.ml  ser_tacexpr.ml
serlib/plugins/ltac2/: dune  ser_tac2expr.ml
serlib/plugins/ltac2_ltac1/: dune
serlib/plugins/ring/: dune
serlib/plugins/ssr/: dune
serlib/plugins/ssrmatching/: dune
serlib/plugins/syntax/: dune
test/browser/: .gitignore  README.md  esbuild.mjs  package.json  tsconfig.json
test/browser/src/: client.ts  index.html
test/compiler/basic/: run.t
test/compiler/basic/proj1/: c.mv
test/serlib/genarg/: dune  ssr_ajean.v
test/server/: package-lock.json  package.json
test/server/src/: LanguageServer.ts
tools/checkdecls/: driver.ml  dune  main.ml
tools/checkdecls/tests/: dune  run.t
