; Should we move this to Fleche?

(library
 (name request)
 (public_name coq-lsp.request)
 (modules request)
 (wrapped false)
 (libraries lambdapi.pure lang fleche))

(library
 (name controller)
 (modules :standard \ request)
 (libraries
  ; ppx_deriving_yojson.runtime
  ; yojson
  ; lang
  ; coq
  fleche
  request
  ; petanque
  ; petanque_json
  fleche_lsp
  ; layout
  dune-build-info))
