; Should we move this to Fleche?

(library
 (name request)
 (public_name coq-lsp.request)
 (modules request)
 (wrapped false)
 (libraries fleche))

(library
 (name controller)
 (modules :standard \ request)
 (libraries
  fleche
  request
  petanque
  petanque_json
  fleche_lsp
  layout
  dune-build-info))
