(library
 (name coq)
 (public_name coq-lsp.coq)
 (preprocess
  (pps ppx_compare ppx_hash))
 (libraries
  (select
   limits_mp_impl.ml
   from
   (memprof-limits -> limits_mp_impl.real.ml)
   (!memprof-limits -> limits_mp_impl.fake.ml))
  ; base interacts poorly with -linkall, which in turn pulls
  ; ppx_inline_test setup and enables the record backtrace runtime
  ; option :/ :7
  ; base
  ; ppx_base
  ; base.base_internalhash_types
  ; ppx_hash.runtime-lib
  ; ppx_compare.runtime-lib
  lang
  ; findlib
  rocq-runtime.clib
  rocq-runtime.lib
  rocq-runtime.config
  rocq-runtime.kernel
  rocq-runtime.library
  rocq-runtime.engine
  rocq-runtime.pretyping
  rocq-runtime.interp
  rocq-runtime.gramlib
  rocq-runtime.parsing
  rocq-runtime.printing
  rocq-runtime.proofs
  rocq-runtime.vernac
  coq-lsp.serlib
  ; EJGA: This is due to Coq.Args, feel free to move to its own lib if
  ; needed
  cmdliner))
