(library
 (name coq)
 (public_name coq-lsp.coq)
 (preprocess
  (pps ppx_compare ppx_hash))
 (libraries
  (select
   limits_mp_impl.ml
   from
   (memprof-limits -> limits_mp_impl.real.ml)
   (!memprof-limits -> limits_mp_impl.fake.ml))
  ; base interacts poorly with -linkall, which in turn pulls
  ; ppx_inline_test setup and enables the record backtrace runtime
  ; option :/ :7
  ; base
  ; ppx_base
  ; base.base_internalhash_types
  ; ppx_hash.runtime-lib
  ; ppx_compare.runtime-lib
  lang
  ; findlib
  coq-core.clib
  coq-core.lib
  coq-core.config
  coq-core.kernel
  coq-core.library
  coq-core.engine
  coq-core.pretyping
  coq-core.interp
  coq-core.gramlib
  coq-core.parsing
  coq-core.printing
  coq-core.proofs
  coq-core.vernac
  coq-lsp.serlib
  ; EJGA: This is due to Coq.Args, feel free to move to its own lib if
  ; needed
  cmdliner))
