(library
 (name serlib_funind)
 (public_name coq-lsp.serlib.funind)
 (synopsis "Serialization Library for Coq Fundind Plugin")
 (preprocess
  (staged_pps ppx_import ppx_sexp_conv ppx_hash ppx_compare))
 (libraries
  ; base
  ; ppx_base
  ; base.base_internalhash_types
  ; ppx_hash.runtime-lib
  ; ppx_compare.runtime-lib
  rocq-runtime.lib
  rocq-runtime.engine
  rocq-runtime.pretyping
  rocq-runtime.proofs
  rocq-runtime.vernac
  sexplib
  serlib
  rocq-runtime.plugins.ltac
  serlib_ltac
  rocq-runtime.plugins.funind))
