(library
 (name serlib_ring)
 (public_name coq-lsp.serlib.ring)
 (synopsis "Serialization Library for Coq Setoid Newring Plugin")
 (preprocess
  (staged_pps ppx_import ppx_sexp_conv ppx_hash ppx_compare))
 (libraries
  ; base
  ; ppx_base
  ; base.base_internalhash_types
  ; ppx_hash.runtime-lib
  ; ppx_compare.runtime-lib
  coq-core.pretyping
  coq-core.plugins.ring
  serlib
  serlib_ltac
  sexplib))
