(library
 (name serlib_ssr)
 (public_name coq-lsp.serlib.ssreflect)
 (synopsis "Serialization Library for Coq [SSR plugin]")
 (preprocess
  (staged_pps
   ppx_import
   ppx_sexp_conv
   ppx_deriving_yojson
   ppx_hash
   ppx_compare))
 (libraries
  ; base
  sexplib
  rocq-runtime.engine
  rocq-runtime.pretyping
  serlib
  rocq-runtime.plugins.ltac
  serlib_ltac
  rocq-runtime.plugins.ssrmatching
  serlib_ssrmatching
  rocq-runtime.plugins.ssreflect))
