(library
 (name serlib_ssr)
 (public_name coq-lsp.serlib.ssreflect)
 (synopsis "Serialization Library for Coq [SSR plugin]")
 (preprocess
  (staged_pps
   ppx_import
   ppx_sexp_conv
   ppx_deriving_yojson
   ppx_hash
   ppx_compare))
 (libraries
  ; base
  sexplib
  coq-core.engine
  coq-core.pretyping
  serlib
  coq-core.plugins.ltac
  serlib_ltac
  coq-core.plugins.ssrmatching
  serlib_ssrmatching
  coq-core.plugins.ssreflect))
