(library
 (name serlib_ssrmatching)
 (public_name coq-lsp.serlib.ssrmatching)
 (synopsis "Serialization Library for Coq [SSR Matching plugin]")
 (preprocess
  (staged_pps
   ppx_import
   ppx_sexp_conv
   ppx_deriving_yojson
   ppx_hash
   ppx_compare))
 (libraries
  ; base
  ; ppx_base
  ; base.base_internalhash_types
  ; ppx_hash.runtime-lib
  ; ppx_compare.runtime-lib
  rocq-runtime.plugins.ssrmatching
  serlib
  serlib_ltac
  sexplib))
